<resources>

    <!-- App Title -->
    <string name="app_name">DentalHub</string>


    <!-- Menu -->
    <string name="action_logout">Logout</string>
    <string name="action_back">Back</string>
    <string name="action_home">Home</string>
    <string name="action_my_account">My Account</string>
    <string name="new_email">New Email</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_username">New Username</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save_button">Save</string>
    <string name="choose_file_button">Choose File</string>
    <string name="remove_file_button">Remove File</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="save_changes_button">Save Changes</string>
    <string name="my_appointments_button">My Appointments</string>
    <!-- Content Description -->
    <string name="pfp_icon_description">Profile Picture</string>


    <!-- Login -->
    <string name="login">LOGIN</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user_prompt">Don\'t have an account? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="change_password_button">Change Password</string>
    <!-- Content Description -->
    <string name="email_icon_description">Email Icon</string>
    <string name="password_icon_description">Password Icon</string>
    <string name="app_logo_description">App Logo</string>
    <!-- Autofill hints -->
    <string name="autofill_email">emailAddress</string>
    <string name="autofill_password">password</string>
    <!-- Prompt Email Password Recovery-->
    <string name="email_prompt">Please type in your email address:</string>


    <!-- SignUp -->
    <string name="register">REGISTER</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="username_hint">Username</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_member">Already a member? Sign in here</string>
    <!-- Content Description -->
    <string name="name_icon_description">Username/First Name/Last Name Icon</string>
    <string name="password_confirmation_icon_description">Password Confirmation Icon</string>
    <!-- Autofill hints -->
    <string name="autofill_username">username</string>
    <string name="autofill_first_name">name</string>
    <string name="autofill_last_name">familyName</string>
    <string name="autofill_password_confirmation">newPasswordConfirmation</string>


    <!-- Main Page -->
    <string name="our_doctors">Our Doctors</string>
    <string name="our_services">Our Services</string>
    <string name="book_appointment">Appointments</string>
    <string name="contact_us">Contact Us</string>
    <string name="check_symptoms">Check Symptoms</string>
    <string name="teeth_care">Teeth Care</string>
    <string name="technologies">Technologies</string>
    <!-- Content Description -->
    <string name="doctors_icon_description">Doctors Icon</string>
    <string name="services_icon_description">Services Icon</string>
    <string name="appointment_icon_description">Appointments Icon</string>
    <string name="contact_icon_description">Contact Icon</string>
    <string name="symptoms_icon_description">Symptoms Checker Icon</string>
    <string name="care_icon_description">Dental Care Icon</string>
    <string name="tech_icon_description">Technologies Icon</string>


    <!-- Doctors -->
    <string name="doctor_image_description">Doctor\'s Image</string>
    <string name="book_now_button">Book Now</string>
    <string name="no_doctors_found">No doctors found!</string>
    <!-- Card Doctor -->
    <string name="specialization">Specialization</string>
    <string name="schedule">Schedule</string>


    <!-- Services -->
    <string name="welcome">Welcome</string>
    <string name="book_now_an_appointment_button">Book Now An Appointment</string>
    <string name="no_services_found">No services found!</string>
    <!-- Content Description -->
    <string name="teeth_helper_description">Team\'s Motto Icon</string>
    <string name="description">Our team is eager to discuss the doctor-patient relationship with you, emphasizing the importance of kindness, understanding, and patience. This relationship is cultivated through professional care and results in personalized treatments tailored to meet the unique needs of each patient.</string>
    <!-- Card Service  -->
    <!-- Content Description -->
    <string name="service_icon_description">Service\'s Icon</string>


    <!-- Appointment -->
    <string name="select_location">Select Location</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="select_service">Which service are you looking for?</string>
    <string name="select_date_time">Select Date and Time</string>
    <string name="select_insurance">Select Insurance Type</string>
    <string name="select_first_and_last_name">Please enter your full name</string>
    <string name="thanks_booking">Thanks for booking!</string>
    <string name="appointment_details">You booked an appointment with Dr. Name on Date at Time."</string>
    <string name="view_my_appointments_button">VIEW MY APPOINTMENTS</string>
    <string name="next_button">Next</string>
    <string name="back_button">Back</string>
    <string name="reschedule_button">Reschedule</string>
    <string name="cancel_button">Cancel</string>
    <string name="check_in_button">Check In</string>
    <string name="book_an_appointment">Book An Appointment</string>
    <string name="no_appointments_found">You have no appointments yet.</string>
    <string name="no_appointments_found_doctor">You have no upcoming appointments.</string>
    <string name="no_appointments_found_admin">There are no appointments yet.</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="doctor_panel">Doctor Panel</string>
    <string name="patient">Patient</string>
    <string name="welcome_simple">Welcome!</string>
    <string name="time_left">In x days</string>
    <string name="doctor">Doctor</string>
    <string name="service">Service</string>
    <string name="insurance">Insurance Type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <!-- Content Description -->
    <string name="calendar_icon_description">Calendar Icon</string>
    <string name="clock_icon_description">Clock/Time Icon</string>
    <string name="location_icon_description">Location Icon</string>


    <!-- Contact -->
    <string name="search_hint">Search for an office here …</string>
    <string name="headquarters">Headquarters</string>
    <string name="headquarters_address">1425 Broadway Suite 22\nNew York, NY 10018</string>
    <string name="local_office">Local Office</string>
    <string name="local_office_address">58 Wall Street Suite 100\nNew York, NY 10005</string>
    <!-- PopUp Message -->
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="name_hint">Name</string>
    <string name="message_hint">Message</string>
    <string name="close_button">Close</string>
    <!-- Content Description -->
    <string name="close_button_description">Close Button</string>
    <string name="fab_description">Send Message Floating Action Button</string>


    <!-- Technologies -->
    <string name="device_name">Device Name</string>
    <string name="no_devices_found">No technologies found!</string>
    <string name="device_description">About the device</string>
    <string name="image_description">Image of the Device</string>


    <!-- Symptom Checker -->
    <string name="symptom">Symptom</string>
    <string name="get_results_button">Get Results</string>
    <string name="diagnosis_results">Diagnosis Results</string>
    <string name="result">You may have…</string>


    <!-- Care -->
    <!-- Content Description -->
    <string name="left_arrow_description">Swipe or click left (arrow) for the previous tab</string>
    <string name="right_arrow_description">Swipe or click right (arrow) for the next tab</string>
    <!-- Card Fragment -->
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="dental_article_icon_description">Dental Care Article\'s Image</string>

</resources>