<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_back"
        android:title="@string/action_back"
        android:orderInCategory="100"
        android:icon="@drawable/arrow_back"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_home"
        android:title="@string/action_home"
        android:orderInCategory="101"
        android:icon="@drawable/home_button"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_my_account"
        android:title="@string/action_my_account"
        android:orderInCategory="103"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="104"
        app:showAsAction="never"/>

</menu>