<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    tools:context=".CardFragment">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/lightTeal"
        android:layout_marginTop="70dp"/>

    <ImageView
        android:id="@+id/imageViewDevice"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/dental_article_icon_description"/>

    <View
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:background="@color/lightTeal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_marginTop="25dp"/>

</LinearLayout>