<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="1dp">

    <ImageButton
        android:id="@+id/buttonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:tint="@color/darkTeal"
        android:contentDescription="@string/close_button_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp"/>

    <TextView
        android:id="@+id/textViewDiagnosisTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diagnosis_results"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/lightTeal"
        app:layout_constraintTop_toBottomOf="@id/buttonClose"
        app:layout_constraintBottom_toTopOf="@id/imageViewIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="1dp"/>

    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/diagnosis_results"
        android:contentDescription="@string/teeth_helper_description"
        app:layout_constraintTop_toBottomOf="@id/textViewDiagnosisTitle"
        app:layout_constraintBottom_toTopOf="@id/textViewDiagnosis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/textViewDiagnosis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/result"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewIcon"
        android:layout_marginBottom="160dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>